# saml2aws-profile

./: Cargo.toml  README.md
src/: main.rs
